--- a/gitlab-srv-install/.env.example
+++ b/gitlab-srv-install/.env.example
@@ -1,2 +1,5 @@
-GITLAB_HOME=/home/gitlab/gitlab-docker
-GITLAB_ROOT_PASSWORD=MySuperSecretAndSecurePassw0rd!
+GITLAB_HOME=""
+GITLAB_ROOT_PASSWORD=""
+DOMIAN_NAME=""
+GITLAB_TAG=""
+# HTTPS=https
