--- a/gitlab-srv-install/.env.example
+++ b/gitlab-srv-install/.env.example
@@ -1,5 +1,5 @@
-GITLAB_HOME=""
-GITLAB_ROOT_PASSWORD=""
-DOMIAN_NAME=""
-GITLAB_TAG=""
+GITLAB_HOME=/home/gitlab/gitlab-docker
+GITLAB_ROOT_PASSWORD=MySuperSecretAndSecurePassw0rd!
+DOMIAN_NAME='vagrant.max-rock.ru'
+GITLAB_TAG=latest
 # HTTPS=https
