--- a/play.yml
+++ b/play.yml
@@ -1,5 +1,5 @@
-- name: Deploy telegram bot
-  hosts: node_1
+- name: Install Gitlab
+  hosts: all
   become: yes
   vars_files:
     - ansible-roles/group_vars/all.yml
@@ -14,6 +14,6 @@
       when: __user_vagrant is failed #or __user_vagrant.hosts|length == 0
       tags: user
 
-    - role: ansible-roles/gitlab-install
-      tags: gitlab
+    # - role: ansible-roles/gitlab-install
+    #   tags: gitlab
 
